src/slots/ExampleSider/index.module.less
@import '~antd/es/style/themes/default.less';

.shadowWrapper {
  position: relative;
  margin-bottom: 12px;
  overflow: auto;
  height: 100%;

  &::before,
  &::after {
    content: '';
    position: absolute;
    z-index: 1;
    top: 0;
    height: 100%;
    box-shadow: 0 0 6px 2px rgba(0, 0, 0, 0);
    width: 1px;
    transition: all 0.3s;
  }

  &::before {
    left: -1px;
  }

  &::after {
    right: -1px;
  }
}

.cards {
  max-width: 100%;
  overflow: hidden;
  white-space: nowrap;
  font-size: 0;
  padding: 1px;
}

.card {
  display: flex;
  width: 100px;
  height: 70px;
  cursor: pointer;
  margin-left: 48px;
  position: relative;
  border: 1px solid #ebedf0;
  transition: all 0.3s;
  user-select: none;
  background-color: #fff;

  &:after {
    transition: all 0.3s;
    background-color: transparent;
    border: 1px solid transparent;
    content: '';
    position: absolute;
    top: -1px;
    bottom: -1px;
    right: -1px;
    left: -1px;
  }

  &:hover {
    border-color: @primary-color;

    &:before {
      transition: all 0.3s;
      content: '';
      position: absolute;
      top: -1px;
      bottom: -1px;
      right: -1px;
      left: -1px;
      background-color: fade(@primary-color, 10%);
    }
  }

  .screenshot {
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
    width: 100%;
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;

    .exampleDemoTitle {
      white-space: pre-wrap;
      line-height: 12px;
      font-size: 10px;
      text-align: center;
      padding: 4px;
    }
  }

  &:last-child {
    margin-right: 0;
  }

  &.current::after {
    background-color: fade(@primary-color, 10%);
    border-color: @primary-color;
  }
}

.searchSider {
  height: 50px;
  display: flex;
  padding-left: 24px;
  align-items: center;
  background-color: #fff;
  justify-content: space-between;

  .searchSiderIcon {
    margin: 0 15px;
    cursor: pointer;
  }
}

.searchValue {
  color: #873bf4;
  font-weight: 500;
}

.sideBarMenu {
  border: none;

  .menuTitleContent {
    display: inline-block;
    width: 100%;
    vertical-align: bottom;

    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
  }

  .subMenuTitleContent {
    width: calc(100% - 16px);
  }
}

